# clasp_w

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Makefile.am  README  configure.in
clasp_w/: CMakeLists.txt  Makefile.am  clasp_solver.cpp  clasp_solver.h  clock.cpp  clock.h  criterion.cpp  criterion.h  criterion_exp.cpp  criterion_exp.h  criterion_window.cpp  criterion_window.h  main.cpp  stopper.cpp  stopper.h  stopper_2c.cpp  stopper_2c.h  stopper_window.cpp  stopper_window.h
libclasp/: CMakeLists.txt  Makefile.am
libclasp/clasp/util/: platform.h
libclasp/doc/api/: clasp
libclasp/example/: example3.cpp  main1.cpp
libclasp/src/: reader.cpp  solve_algorithms.cpp  solver.cpp
