lib_LIBRARIES = libclasp.a

libclasp_a_CXXFLAGS = -I .

libclasp_a_SOURCES = \
./src/solver.cpp \
./src/minimize_constraint.cpp \
./src/heuristics.cpp \
./src/weight_constraint.cpp \
./src/preprocessor.cpp \
./src/constraint.cpp \
./src/clasp_facade.cpp \
./src/shared_context.cpp \
./src/program_rule.cpp \
./src/program_builder.cpp \
./src/cb_enumerator.cpp \
./src/unfounded_check.cpp \
./src/timer.cpp \
./src/enumerator.cpp \
./src/parallel_solve.cpp \
./src/solve_algorithms.cpp \
./src/lookahead.cpp \
./src/dependency_graph.cpp \
./src/satelite.cpp \
./src/reader.cpp \
./src/model_enumerators.cpp \
./src/solver_types.cpp \
./src/clause.cpp

noinst_HEADERS = \
./clasp/program_builder.h \
./clasp/model_enumerators.h \
./clasp/program_rule.h \
./clasp/solve_algorithms.h \
./clasp/solver.h \
./clasp/clasp_facade.h \
./clasp/parallel_solve.h \
./clasp/weight_constraint.h \
./clasp/clause.h \
./clasp/constraint.h \
./clasp/preprocessor.h \
./clasp/cb_enumerator.h \
./clasp/solver_types.h \
./clasp/minimize_constraint.h \
./clasp/shared_context.h \
./clasp/pod_vector.h \
./clasp/satelite.h \
./clasp/unfounded_check.h \
./clasp/enumerator.h \
./clasp/dependency_graph.h \
./clasp/lookahead.h \
./clasp/reader.h \
./clasp/solver_strategies.h \
./clasp/util \
./clasp/util/mutex.h \
./clasp/util/indexed_priority_queue.h \
./clasp/util/multi_queue.h \
./clasp/util/type_manip.h \
./clasp/util/timer.h \
./clasp/util/left_right_sequence.h \
./clasp/util/misc_types.h \
./clasp/util/atomic.h \
./clasp/util/pod_vector.h \
./clasp/util/platform.h \
./clasp/util/thread.h \
./clasp/literal.h \
./clasp/heuristics.h \
./tests/common.h

